# Python-Risk-Management-Library

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_usage.py
risk_toolkit/: __init__.py  drawdown.py  metrics.py  utils.py  var.py
tests/: test_drawdown.py  test_metrics.py  test_var.py
