[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-toolkit"
version = "0.1.0"
description = "Financial risk and performance metrics for portfolios and single assets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abdullah Bulut", email = "abdullah.kemal.bulut@gmail.com" },
]
keywords = ["finance", "risk", "var", "sharpe", "volatility", "drawdown"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["risk_toolkit*"]
